--- a/gb/nsc413_2.md
+++ b/gb/nsc413_2.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/gdjsw246/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆新闻</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/gdjsw246/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/gdjsw246/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/gdjsw246/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/23/n11739570.md#1" target="_blank">【2019盘点】时代变革 川普的九记重锤</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/23/n11739570.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-51345108-150x120.jpg" align ="left"></a>对美中关系来说，2019年是充满挑战和对抗的一年。过去一年中，美国川普（特朗普）政府全方位向中共出击，连发九记重锤，重挫中共霸凌气焰，成功阻止中共在海外扩张野心。同时进一步让美国和世界其它国家看清中共本质。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:04 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754599.md#1" target="_blank">曾遭男友辱骂 沈阳航空航天大学女生坠楼亡</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754599.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/de39227d8906a6352954f97858c08ecd-150x120.png" align ="left"></a>近日，有贴文称，沈阳航空航天大学一名女生跳楼身亡，原因是不堪男友辱骂、骚扰等。此事引起网民热议。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:04 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754376.md#1" target="_blank">业界人士：美中贸易真正的大戏在技术领域</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754376.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/GettyImages-1126143684-600x400-2-150x120.jpg" align ="left"></a>美中日前达成第一阶段贸易协议后，有业界人士松了口气，但有业界人士表示，协议的落实仍存在变数，美中贸易战恐怕只是暂时停火而非永久停战，双方“还未进入真正战场”。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:03 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/25/n11743871.md#1" target="_blank">【独家】原大陆医生：我为何远离器官移植</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/25/n11743871.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1102230313011227-150x120.jpg" align ="left"></a>钟医生是辞去国内工作出国留学的，随后开始参加了一些民运活动，包括“十一”期间的系列活动、一些研讨会，以及最近关于香港反送中的集会等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 8:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank">天津强拆世界级别墅群 数百业主走投无路</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/st.coTE9r1M0pCq-150x120.jpg" align ="left"></a>天津武清区世界级岛居别墅区翠金湖美墅岛在寒冬腊月强拆，无安置，赔偿不公，数百业主走投无路。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 7:18 PM							</td></tr>
@@ -24,18 +26,10 @@
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11753291.md#1" target="_blank">历史即将翻开新页 痛忆香港抗争者的创伤</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11753291.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/190825115157100615-150x120.jpg" align ="left"></a>香港这场轰轰烈烈的反送中运动上升到反抗中共暴政的运动，被认为是香港人的觉醒运动。香港年轻一代为捍卫港人自身权益和香港的未来付出了巨大代价，也感动了更多的成年人挺身而出，形成不分勇武、不割席“齐上齐落”的抗争场面。
 
 新的一年即将来临，历史将翻过新的一页，让我们来盘点一下这半年多来，在中共暴政背后的操控下，香港警方的滥捕滥暴给港人留下怎么样的创伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:47 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11753365.md#1" target="_blank">镇政府食堂现熊掌、猫头鹰 领导工作餐？</a><br></h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11753365.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Screen-Shot-2019-12-29-at-10.13.28-AM-150x120.png" align ="left"></a>黑龙江通河县打掉一个非法贩卖野生动物的“山货店”，查获熊掌、野猪、猫头鹰等数十只野生动物残骸，另外界吃惊的是，熊掌是被藏在镇政府食堂的冰柜中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 11:29 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754482.md#1" target="_blank">湖南“操场埋尸案” 原校长黄炳松获刑15年</a><br></h3>12月30日，陆媒报导，湖南怀化新晃县“操场埋尸案”10名相关公职人员分别被以徇私枉法罪、渎职罪判处7年至15年不等的有期徒刑。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 5:11 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754591.md#1" target="_blank">每日三退声明精选（2019/12/29）</a><br></h3>太坑人了，家被拆，无处申冤！为了生活选择工作还被抓进监狱，没有房可住，微薄的退休金还是最低的双轨制，都不敢得病，怕死不起！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 3:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754339.md#1" target="_blank">重庆涪陵一居民楼着火 6人死亡</a><br></h3>2019年12月30日早上，重庆市涪陵区一居民楼着火，导致6人死亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:02 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/30/n11754205.md#1" target="_blank">辽宁沈阳一大巴撞限高杆 车顶全部被削掉</a><br></h3>12月29日下午，辽宁省沈阳市发生一起交通事故，一辆大巴车与限高杆相撞，导致车顶脱落，波及旁边的小轿车，致小轿车内一人受伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 1:13 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11753030.md#1" target="_blank">山西国企煤矿集团子公司发生事故 5死1伤</a><br></h3>12月30日，山西同煤集团官网、党委宣传部消息，12月29日凌晨零时，同煤集团地煤公司焦煤矿305煤眼，发生一起流煤眼歘煤事故。事发时6人被困，经救援，5人抢救无效死亡，1人送医后生命体征平稳。事故原因仍在调查中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:34 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/19/12/29/n11752311.md#1" target="_blank">【翻墙必看】内蒙古公安警官开枪打死两官</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
-
-1.内蒙古公安警官枪杀两副局长 当局封口
-圣诞节当日，大陆内蒙古一森林公安局的警官突然枪击5名同事，致其中两名副局长身亡。中共公安部和内蒙古当局派人进驻当地调查，并全面封锁消息。
-
-2.美参院两党有望快速解决弹劾川普案
-美国会参议院有望在快速解决弹劾总统川普（特朗普）案上达成第一步的共识；不过在具体审讯程序.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:30 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/gdjsw246/djy/blob/master/gb/nsc413_2.md#1<br><a href="https://github.com/gdjsw246/djy/blob/master/gb/nsc413_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/gdjsw246/djy/blob/master/gb/nsc413_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/nsc413_2.htm">http://www.epochtimes.com/gb/nsc413_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
